--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -17,6 +17,7 @@ sources:
             tests:
               - unique
               - not_null
+      - name: orders_au
       - name: deliveries
         description: Each record in this table represents an order delivery in our ecommerce application.
 
