--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -10,11 +10,13 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
+
+target-path: "target"
 clean-targets:
   - "target"
   - "dbt_packages"
 
 models:
   +dbt_training:
-flags:
-  require_generic_test_arguments_property: true
+    #staging:
+    #  +materialized: view
