--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -9,14 +9,12 @@ sources:
         columns:
           - name: id
             description: '{{ doc("customer_id") }}'
-      - name: orders
-        identifier: orders_us
-        description: Each record in this table represents an order in our ecommerce application.
-        columns:
-          - name: id
-            tests:
-              - unique
-              - not_null
+      - name: orders_us  # This used to be orders with identifier pointing to orders_us. Now it's just plain orders_us.
+        description: Each record in this table represents an order in our ecommerce store in the US
+      - name: orders_de
+        description: Each record in this table represents an order in our ecommerce store in Germany
+      - name: orders_au
+        description: Each record in this table represents an order in our ecommerce store in Australia
       - name: deliveries
         description: Each record in this table represents an order delivery in our ecommerce application.
 
