--- a/snapshots/orders_snapshot.yml
+++ b/snapshots/orders_snapshot.yml
@@ -1,6 +1,6 @@
 snapshots:
   - name: orders_snapshot
-    relation: source('ecomm', 'orders')
+    relation: source('ecomm', 'orders_us')
     config:
       unique_key: id
       strategy: timestamp
