--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -17,6 +17,7 @@ clean-targets:
   - "dbt_packages"
 
 models:
+  +query_tag: 'dbt_course'
   +dbt_training:
     #staging:
     #  +materialized: view
