--- a/models/marts/properties.yml
+++ b/models/marts/properties.yml
@@ -27,14 +27,66 @@ models:
           - greater_than_zero
 
   - name: orders
+    versions:
+      - v: 1
+    config:
+      contract:
+        enforced: true
+    description: ""
     columns:
+      - name: pk_orders
+        data_type: varchar
+        description: "Primary key of Orders table"
+        constraints:
+          - type: primary_key
+        tests:
+          - unique
+
+      - name: hk_customer
+        data_type: varchar
+        description: ""
+
       - name: order_id
+        data_type: varchar
+        description: "ID of order"
         tests:
           - unique
           - not_null
-      - name: delivery_time_from_collection
-        tests:
-          - greater_than_zero
+
+      - name: customer_id
+        data_type: number
+        description: ""
+
+      - name: ordered_at
+        data_type: timestamp_ntz
+        description: ""
+
+      - name: order_status
+        data_type: varchar
+        description: ""
+
+      - name: total_amount
+        data_type: float
+        description: ""
+
+      - name: store_name
+        data_type: varchar
+        description: ""
+
       - name: delivery_time_from_order
+        data_type: number
         tests:
           - greater_than_zero
+
+      - name: delivery_time_from_collection
+        data_type: number
+        tests:
+          - greater_than_zero
+
+      - name: source_last_updated
+        data_type: timestamp_ntz
+        description: ""
+
+      - name: last_updated
+        data_type: timestamp_ltz
+        description: ""
