--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -10,8 +10,6 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
-
-target-path: "target"
 clean-targets:
   - "target"
   - "dbt_packages"
@@ -21,8 +19,13 @@ models:
   +dbt_training:
     #staging:
     #  +materialized: view
+    +persist_docs:
+      relation: true
+      columns: true
 
   ## elementary models will be created in the schema '<your_schema>_elementary'
   ## for details, see docs: <https://docs.elementary-data.com/>
   elementary:
     +schema: "elementary"
+flags:
+  require_generic_test_arguments_property: true
