--- a/packages.yml
+++ b/packages.yml
@@ -3,3 +3,5 @@ packages:
     version: 1.3.2
   - package: elementary-data/elementary
     version: 0.20.1
+  - package: dbt-labs/codegen
+    version: 0.14.0
