Change dbt_training model materialization to view

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -17,6 +17,5 @@ clean-targets:
   - "dbt_packages"
 
 models:
-  +dbt_training:
-    #staging:
-    #  +materialized: view
+  dbt_training:
+    +materialized: view
