--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -17,6 +17,10 @@ sources:
             tests:
               - unique
               - not_null
+
+      - name: orders_au_duped # This is new for Lab 7
+        description: This table contains duplicate order records in our ecommerce store in Australia
+          
       - name: deliveries
         description: Each record in this table represents an order delivery in our ecommerce application.
 
