--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -9,18 +9,20 @@ sources:
         columns:
           - name: id
             description: '{{ doc("customer_id") }}'
-      - name: orders
-        identifier: orders_us
-        description: Each record in this table represents an order in our ecommerce application.
-        columns:
-          - name: id
-            tests:
-              - unique
-              - not_null
+            
+      - name: orders_us # This no longer has an orders alias
+        description: Each record in this table represents an order in our ecommerce store in the US
 
-      - name: orders_au_duped # This is new for Lab 7
-        description: This table contains duplicate order records in our ecommerce store in Australia
-          
+      - name: orders_de # This is new
+        description: Each record in this table represents an order in our ecommerce store in Germany
+
+      - name: orders_au # This is new
+        description: Each record in this table represents an order in our ecommerce store in Australia
+    
+      - name: orders_au_duped # This is new
+        description: Each record in this table represents an order in our ecommerce store in Australia
+
+
       - name: deliveries
         description: Each record in this table represents an order delivery in our ecommerce application.
 
